# eudaq-decoder

./: CMakeLists.txt  README.md
cmake/: FindEUDAQ.cmake
src/: eudaqevd4.cc  main.cc
